--- a/case_study/src/main/resources/templates/customer/list.html
+++ b/case_study/src/main/resources/templates/customer/list.html
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
+                    <li sec:authorize="hasRole('ADMIN')" class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Employee
@@ -47,7 +47,7 @@
                             <li><a class="dropdown-item" th:href="@{/customer/list}">List Customer</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li  class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2"
                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Facility
@@ -56,7 +56,7 @@
                             <li><a class="dropdown-item" th:href="@{/facility/list}">List Facility</a></li>
                         </ul>
                     </li>
-                    <li class="nav-item dropdown">
+                    <li sec:authorize="hasRole('ADMIN')" class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown4"
                            role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
@@ -67,7 +67,7 @@
                         </ul>
                     </li>
                 </ul>
-                <form th:action="@{/customer/list}" class="d-flex">
+                <form  th:action="@{/customer/list}" class="d-flex">
                     <input th:type="text" name="name" class="form-control me-2" type="search" placeholder="Search"
                            aria-label="Search Name">
                     <input th:type="text" name="email" class="form-control me-2" type="search" placeholder="Search"
@@ -89,7 +89,8 @@
     <div style="    height: 70%">
         <div align="center">
             <h1>List Customer</h1>
-            <a th:href="@{/customer/create}" role="button" class="btn btn-primary">Create Customer</a>
+            <a th:href="@{/customer/create}" role="button" class="btn btn-primary" sec:authorize="hasRole('ADMIN')">Create
+                Customer</a>
             <p style="font-weight: bold;color: red" th:text="${msg}"></p>
         </div>
         <table class="table table-striped table-bordered" style="width: 100%;">
@@ -104,8 +105,8 @@
                 <th scope="col">Email</th>
                 <th scope="col">Address</th>
                 <th scope="col">Customer Type</th>
-                <th scope="col">Edit</th>
-                <th scope="col">Delete</th>
+                <th scope="col" sec:authorize="hasRole('ADMIN')">Edit</th>
+                <th scope="col" sec:authorize="hasRole('ADMIN')">Delete</th>
             </tr>
             </thead>
             <tbody>
@@ -121,8 +122,9 @@
                 <td th:text="${customer.email}"></td>
                 <td th:text="${customer.address}"></td>
                 <td th:text="${customer.customerType.name}"></td>
-                <td><a th:href="@{/customer/edit?id=__${customer.id}__}" role="button" class="btn btn-primary">Edit</a>
-                <td>
+                <td sec:authorize="hasRole('ADMIN')"><a th:href="@{/customer/edit?id=__${customer.id}__}" role="button"
+                                                        class="btn btn-primary">Edit</a>
+                <td sec:authorize="hasRole('ADMIN')">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Delete
                     </button>
